# CaveStoryRemake

./: CMakeLists.txt
headers/: AnimatedSprite.h  Game.h  Graphics.h  InputKeyboard.h  Level.h  Player.h  Rectangle.h  Slope.h  Sprite.h  Tile.h  Tileset.h  Vector2.h  globals.h
maps/: Map1.tmx
resources/tilesets/: PrtCave.tsx
src/: AnimatedSprite.cpp  Game.cpp  Graphics.cpp  InputKeyboard.cpp  Level.cpp  Player.cpp  Sprite.cpp  Tile.cpp  Tileset.cpp  Vector2.cpp  main.cpp
